--- a/public/sport_phone/css/app.css
+++ b/public/sport_phone/css/app.css
@@ -89,3 +89,15 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
     color:rgb(111,117,119);
 }
 
+
+.login-panel{
+    width:500px;
+    height:auto;
+    background:rgba(255,255,255,0.9);
+    border-radius:10px;
+    margin-top:0px;
+    margin-bottom:50px;
+    margin-left:auto;
+    margin-right:auto;
+    padding:20px 30px 20px 30px;
+}
