--- a/public/sport_phone/css/app.css
+++ b/public/sport_phone/css/app.css
@@ -68,6 +68,12 @@ div.sliceline {
     border-radius: 20% !important;
 }
 
+#soucealign{
+    height: 40px;
+    text-align: left;
+    line-height: 40px;
+}
+
 .chatstyleself {
     background-color: rgb(172,118,118);
 }
